<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright (C) 2014 Eric Butler

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9E9E9">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <LinearLayout
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            style="@style/ListHeader">
            <TextView
                android:id="@android:id/text1"
                android:text="@string/tapchat_need"
                android:layout_marginTop="0dp"
                style="@style/ListHeaderText" />
            <View style="@style/ListHeaderDivider" />
        </LinearLayout>
        <TextView
            android:id="@+id/tapchat_server_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="18sp" />
        <LinearLayout
            android:id="@+id/connect_header"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            style="@style/ListHeader">
            <TextView
                android:id="@android:id/text1"
                android:text="@string/connect_your_tapchat"
                style="@style/ListHeaderText" />
            <View style="@style/ListHeaderDivider" />
        </LinearLayout>
        <AutoCompleteTextView
            android:id="@+id/server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/server_hint" />
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:layout_marginBottom="8dp" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_hint" />
        <CheckBox
            android:id="@+id/show_password"
            android:text="@string/show_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />
        <Button
            android:id="@+id/login"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>