<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright (C) 2014 Eric Butler

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:baselineAligned="false">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">
            <LinearLayout
                style="@style/ListHeader">
                <TextView
                    android:text="@string/connection"
                    style="@style/ListHeaderText" />
                <View style="@style/ListHeaderDivider" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/hostname"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:inputType="textUri"
                    android:hint="@string/hostname_hint" />
                <EditText
                    android:id="@+id/port"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/use_ssl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/secure_connection" />

            <EditText
                android:id="@+id/server_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/server_password_hint" />

            <LinearLayout
                style="@style/ListHeader">
                <TextView
                    android:text="@string/identity"
                    style="@style/ListHeaderText" />
                <View style="@style/ListHeaderDivider" />
            </LinearLayout>

            <EditText
                android:id="@+id/nick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/nickname" />
            <EditText
                android:id="@+id/real_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/real_name" />
            <!--
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/nickserv_password_hint" />
            -->
            <LinearLayout
                style="@style/ListHeader">
                <TextView
                    android:text="@string/network_name"
                    style="@style/ListHeaderText" />
                <View style="@style/ListHeaderDivider" />
            </LinearLayout>
            <EditText
                android:id="@+id/network_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="?android:attr/dividerHorizontal"
        android:showDividers="beginning"
        android:dividerPadding="0dip">
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:measureWithLargestChild="true"
            tools:ignore="UselessParent">
            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@android:string/cancel" />
            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>